[feature/cloudflare] fixing both endpoints
